--- a/styles/style.css
+++ b/styles/style.css
@@ -1,34 +1,147 @@
-html {
-	font-size: 10px;
-	font-family: 'Roboto', sans-serif;
-	background-color: #E2F4D1;
-}
-h1 {
-	font-size: 60px;
-	text-align: center;
-}
+/* || General setup */
 
-p, ol, ul {
-	font-size: 16px;
-	line-height: 1;
-	letter-spacing: 1px;
-}
-body {
-  width: 600px;
-  margin: auto;
-  background-color: #F9EDDB;
-  padding: 0px 20px 20px 20px;
-  border: 5px solid black;
-}
-
-h1 {
+html, body {
   margin: 0;
-  padding: 20px 0;    
-  color: #9EC07B;
-  text-shadow: 3px 3px 1px black;
+  padding: 0;
 }
 
-img {
+html {
+  font-size: 10px;
+  background-color: #F9EDDB;
+}
+
+body {
+  width: 70%;
+  min-width: 800px;
+  margin: 0 auto;
+}
+
+/* || typography */
+
+h1, h2, h3 {
+  font-family: 'Cinzel Decorative', cursive;
+  color: #2a2a2a;
+}
+
+p, input, li, dt, dd {
+  font-family: 'Roboto Condensed', sans-serif;
+  color: #2a2a2a;
+}
+
+h1 {
+  font-size: 4rem;
+  text-align: center;
+  text-shadow: 2px 2px 10px black;
+}
+
+h2 {
+  font-size: 3rem;
+  text-align: center;
+}
+
+h3 {
+  font-size: 2.2rem;
+}
+
+p, li, dt {
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+
+dd {
+  font-size: 1.5rem;
+  line-height: 1.5; 
+}
+
+/* || header layout */
+
+header {
+  margin-bottom: 10px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+body > * {
+  background-color: red;
+  padding: 1%;
+}
+
+main, header, nav, article, aside, footer, section {
+  background-color: rgba(87, 149, 162, 0.5);
+  padding: 2%;
+}
+
+h1 {
+  flex: 5;
+  text-transform: uppercase;
+}
+
+header img {
   display: block;
-  margin: auto;
+  height: 120px;
+  padding-top: 20.15px;
+}
+
+nav {
+  height: 50px;
+  flex: 100%;
+  display: flex;
+}
+
+nav ul {
+  padding: 0;
+  list-style-type: none;
+  flex: 2;
+  display: flex;
+}
+
+nav li {
+  display: inline;
+  text-align: center;
+  flex: 1;
+}
+
+nav a, nav span {
+  display: inline-block;
+  font-size: 2rem;
+  height: 3rem;
+  line-height: 1.7;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+
+}
+
+/* || main layout */
+
+main {
+  display: flex;
+}
+
+article {
+  flex: 4;
+}
+
+aside {
+  flex: 1;
+  margin-left: 10px;
+  padding: 1%;
+}
+
+aside a {
+  display: block;
+  float: left;
+  width: 50%;
+}
+
+aside img {
+  max-width: 100%;
+}
+
+footer {
+  margin-top: 10px;
+}
+
+footer form {
+  text-align: right
 }
